OPHJOD-3054: Upgrade Java to version 25